added allure